--- a/src/peakrdl_python/templates/addrmap_register.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_register.py.jinja
@@ -139,4 +139,33 @@ class {{get_fully_qualified_type_name(node)}}_cls(RegWriteOnly):
         {% endif %}
     {%- endfor %}
 
+    {%- if node.is_array %}
+        {%- if node.has_sw_readable and node.has_sw_writable %}
+class {{get_fully_qualified_type_name(node)}}_array_cls(RegReadWriteArray):
+        {%- elif node.has_sw_readable and not node.has_sw_writable %}
+class {{get_fully_qualified_type_name(node)}}_array_cls(RegReadWriteArray):
+        {%- elif not node.has_sw_readable and node.has_sw_writable %}
+class {{get_fully_qualified_type_name(node)}}_array_cls(RegReadWriteArray):
+        {%- endif %}
+    """
+    Class to represent a register array in the register model
+    """
+    __slots__: List[str] = []
+
+    def __init__(self, logger_handle: str, inst_name: str,
+                 parent: Union[RegFile, AddressMap, Memory],
+                 elements: Tuple[{{get_fully_qualified_type_name(node)}}_cls, ...]):
+
+        for element in elements:
+            if not isinstance(element, {{get_fully_qualified_type_name(node)}}_cls):
+                raise TypeError(f'All Elements should be of type {{get_fully_qualified_type_name(node)}}_cls, '
+                                f'found {type(element)}')
+
+        super().__init__(logger_handle=logger_handle, inst_name=inst_name,
+                         parent=parent, elements=elements)
+
+    def __getitem__(self, item) -> Union[{{get_fully_qualified_type_name(node)}}_cls, Tuple[{{get_fully_qualified_type_name(node)}}_cls, ...]]:
+        # this cast is OK because an explict typing check was done in the __init__
+        return cast(Union[{{get_fully_qualified_type_name(node)}}_cls, Tuple[{{get_fully_qualified_type_name(node)}}_cls, ...]], super().__getitem__(item))
+    {%- endif %}
 {%- endmacro %}
