--- a/src/peakrdl_python/templates/reg_definitions.py.jinja
+++ b/src/peakrdl_python/templates/reg_definitions.py.jinja
@@ -1,29 +1,32 @@
 {%- macro register_class_attributes(node) %}
         {%- if node.is_array %}
             {%- if node.has_sw_readable and node.has_sw_writable %}
-    self.__{{node.inst_name}} = ( {% for node_instance_index in range(get_array_dim(node))  %}
-                                       {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
-                                                                   address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
-                                                                   logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
-                                                                                   inst_name='{{node.inst_name}}[{{node_instance_index}}]', parent=self)
-                                       {%- if not loop.last -%} ,  {%- endif -%}
-                                       {% endfor %} )
+    self.__{{node.inst_name}} = {{get_fully_qualified_type_name(node)}}_array_cls(elements=( {% for node_instance_index in range(get_array_dim(node))  %}
+                                                                                             {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
+                                                                                             address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
+                                                                                             logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
+                                                                                             inst_name='{{node.inst_name}}[{{node_instance_index}}]', parent=self)
+                                                                                             {%- if not loop.last -%} ,  {%- endif -%} {% endfor %} ),
+                                                                                  logger_handle=logger_handle+'.{{node.inst_name}}',
+                                                                                  inst_name='{{node.inst_name}}', parent=self)
             {%- elif node.has_sw_readable and not node.has_sw_writable %}
-    self.__{{node.inst_name}} = ( {% for node_instance_index in range(get_array_dim(node))  %}
-                                       {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
-                                                                   address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
-                                                                   logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
-                                                                                   inst_name='{{node.inst_name}}[{{node_instance_index}}]', parent=self)
-                                       {%- if not loop.last -%} ,  {%- endif -%}
-                                       {% endfor %} )
+    self.__{{node.inst_name}} = {{get_fully_qualified_type_name(node)}}_array_cls(elements=( {% for node_instance_index in range(get_array_dim(node))  %}
+                                                                                             {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
+                                                                                             address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
+                                                                                             logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
+                                                                                             inst_name='{{node.inst_name}}[{{node_instance_index}}]', parent=self)
+                                                                                             {%- if not loop.last -%} ,  {%- endif -%} {% endfor %} ),
+                                                                                  logger_handle=logger_handle+'.{{node.inst_name}}',
+                                                                                  inst_name='{{node.inst_name}}', parent=self)
             {%- elif not node.has_sw_readable and node.has_sw_writable %}
-    self.__{{node.inst_name}} = ( {% for node_instance_index in range(get_array_dim(node))  %}
-                                       {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
-                                                                   address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
-                                                                   logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
-                                                                                   inst_name='{{node.inst_name}}[{{node_instance_index}}]', parent=self)
-                                       {%- if not loop.last -%} ,  {%- endif -%}
-                                       {% endfor %} )
+    self.__{{node.inst_name}} = {{get_fully_qualified_type_name(node)}}_array_cls(elements=( {% for node_instance_index in range(get_array_dim(node))  %}
+                                                                                             {{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,
+                                                                                             address=self.address+{{node.raw_address_offset}}+({{node_instance_index}} * {{node.array_stride}}),
+                                                                                             logger_handle=logger_handle+'.{{node.inst_name}}[{{node_instance_index}}]',
+                                                                                             inst_name='{{node.inst_name}}[{{node_instance_index}}]', parent=self)
+                                                                                             {%- if not loop.last -%} ,  {%- endif -%} {% endfor %} ),
+                                                                                  logger_handle=logger_handle+'.{{node.inst_name}}',
+                                                                                  inst_name='{{node.inst_name}}', parent=self)
             {%- endif %}
         {%- else %}
             {%- if node.has_sw_readable and node.has_sw_writable %}
@@ -47,7 +50,7 @@
 {%- endmacro %}
 
 {%- macro child_readable_register_getter(node) %}
-    def get_readable_registers(self, unroll=False) -> Iterator[Union[Union[ReadableRegister], Tuple[Union[ReadableRegister],...]]]:
+    def get_readable_registers(self, unroll=False) -> Iterator[Union[ReadableRegister, Tuple[ReadableRegister, ...]]]:
         """
         generator that produces all the readable_registers of this node
         """
@@ -72,7 +75,7 @@
 {%- endmacro %}
 
 {%- macro child_writable_register_getter(node) %}
-    def get_writable_registers(self, unroll=False) -> Iterator[Union[Union[WritableRegister], Tuple[Union[WritableRegister],...]]]:
+    def get_writable_registers(self, unroll=False) -> Iterator[Union[WritableRegister, Tuple[WritableRegister, ...]]]:
         """
         generator that produces all the readable_registers of this node
         """
